fixed alignment of group video call

--- a/src/components/Chat/GroupCall/GroupCall.css
+++ b/src/components/Chat/GroupCall/GroupCall.css
@@ -1,22 +1,77 @@
-.group__call {
-  position: relative;
-  height: 95vh;
+.room {
   width: 40rem;
+  color: #fff;
   overflow-x: hidden;
   overflow-y: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
 }
 
-.group__call .user_video {
-  width: 45%;
-  margin: 0.3rem;
-  border-radius: 5px;
+.room::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
+.room__container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 48vh);
+  grid-auto-rows: 48vh;
+}
+
+.onlyCaller__present {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 95vh;
+  position: relative;
+}
+
+.user__video {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  grid-column: 1 / -1;
+  position: relative;
+}
+
+.twoUser__video {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  grid-column: 1 / -1;
+  position: relative;
+}
+
+.even__user,
+.more__user {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+}
+
+.odd_user {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  grid-column: 1 / -1;
+  position: relative;
+}
+
+.room .room__container h6,
+.room .onlyCaller__present h6 {
+  position: absolute;
+  bottom: 0;
+  left: 1;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 @media only screen and (max-width: 680px) {
-  .group__call {
-    width: 95%;
+  .room {
+    width: 100%;
   }
 }
